<resources>
    <string name="app_name">Final_Project</string>
    <string name="type_of">There are many types of hot pot across China, but at its most basic, Chinese Hot Pot is an interactive meal in which diners sit around a simmering pot of soup at the center of the table with various raw ingredients—meat, seafood, vegetables, tofu, and starches—in thin slices or small pieces for quick cooking.</string>
    <string name="ty_text2">Two of the most popular hotpots are Sichuan hotpot and Beijing mutton hotpot (instant-boiled mutton). Some other popular hotpots include seafood hotpot in Guangdong, sauerkraut hotpot in Northeast China, chrysanthemum hotpot in Suzhou and Hangzhou, and beef hotpot in Hong Kong.</string>
    <string name="text1page3">Emerging in early 19th century, Sichuan hot pot is famous for its numb, spicy, fresh and fragrant taste. Spicy is the soul. The spicier, the better. Chongqing hot pot and Chengdu hot pot are two most popular and famous hot pot in Sichuan.Chongqing hot pot is also known as cattle stomach hot pot or spicy hot pot, originated in the late Ming and early Qing dynasty, when boat trackers at Chaotianmen and other wharfs enjoyed this way of eating together. It is famous for its pure numb and spicy taste. The main ingredients are animal offal such as beef belly, pig yellow throat, duck intestine and beef blood flourishing.</string>
    <string name="hot_pot1">Hot Pot</string>
    <string name="hot_pot2">How hot pot look like</string>
    <string name="hot_pot3">For more infromation Please scroll down</string>
    <string name="hot_pot4">Type of Hot Pot</string>
    <string name="hot_pot5">Top Most Popular Chinese Hot Pot</string>
    <string name="hot_pot6">1. Chongqing Hot Pot</string>
    <string name="hot_pot7">3. Chaoshan Beef Hot Pot</string>
    <string name="hot_pot8">2. Chengdu Hot Pot</string>
    <string name="hot_pot9">Some Best hot pot </string>
    <string name="hot_pot10">Yunnan Mushroom Hot Pot</string>
    <string name="hot_pot11">Porridge Hot Pot in Shunde Guangdong</string>
    <string name="hot_pot12"> Guizhou Sour Soup Fish Hot Pot</string>
    <string name="hot_pot13">Northern China Hot pot</string>
    <string name="hot_pot14">Sauerkraut Hotpot</string>
    <string name="hot_pot15">Another great choice for people that don’t eat spicy, Chaoshan beef hot pot also features a pot of light yet nourishing soup (made of beef bone and white radish). Without soy source, monosodium glutamate or any chili pepper, the authenticity of food ingredients, especially the beef, is retained."</string>
    <string name="hot_pot16">Click here for go ot beijing duck</string>
    <string name="about_hotpot">Hot Pot, named Antique Soup in ancient times, was created about 2000 years ago by using bronze tripod and later pottery as the pot. It got very popular since Song Dynasty and became a royal dish in Qing Dynasty. When thinking of hot pot, you may think hot and spicy taste. Actually people in different areas of China have created different flavors and different ways to eat hotpot according to local eating habits. Here below we list the top 10 most popular Chinese hot pot. Don’t miss the hot pot that makes your mouthwatering most when taking a foodie tour of China.</string>
    <string name="noodles1">It also shows very unique style and great attainments in noodle – a simple but very popular food in China. Noodles are easy to cook, with a wide range of cooking methods and ever-changing flavors. Here is a list of China s top 8 noodles that you should not miss during your authentic Foodie Tours in China.</string>
    <string name="noodles2">In Mandarin, miàn (simplified Chinese: 面; traditional Chinese: 麵; often transliterated as "mien" or "mein" ) refers to noodles made from wheat flour, while fěn (粉) or "fun" refers to noodles made from other starches, particularly rice flour and mung bean starch.</string>
    <string name="noodles3">It also shows very unique style and great attainments in noodle – a simple but very popular food in China. Noodles are easy to cook, with a wide range of cooking methods and ever-changing flavors. Here is a list of China\'s top 8 noodles that you should not miss during your authentic Foodie Tours in China.</string>
    <string name="noodles4">Though noodles are part of everyday life in Chinese culture, they also hold a lot of symbolism when eaten during significant events. In China, noodles are frequently eaten during the start of the Lunar New Year and on birthdays. In fact, they symbolize longevity and good health for the year ahead.</string>
    <string name="noodles5">Guangdongese lo mein or laomian (lit. stirred noodles) refers to any kind of dish made with separately boiled wheat and egg noodles which are then tossed in a savory sauce and mixed with various stir-fried vegetables or meats.</string>
    <string name="noodles6">Noodles in china</string>
    <string name="noodles7">photo of Famous Noodles</string>
    <string name="noodles8">For more infromation Please go to next pages</string>
    <string name="noodles9">Explanation</string>
    <string name="noodles10">Some famous Noodles</string>
    <string name="noodles11">Zhajiangmian</string>
    <string name="noodles12">Lanzhou Beef Ramen </string>
    <string name="noodles13">Dandanmian</string>
    <string name="noodles14">Guilin Rice Noodles</string>
    <string name="noodles15">Popular noodles in china</string>
    <string name="noodles16">Lo mein</string>
    <string name="noodles17">Dan Dan Doodles</string>
    <string name="noodles18">click here for go to kungpao chicken</string>
    <string name="duck1">A poultry bird or chicken feed is often given to Pekin ducks. A game bird feed will provide more protein in their diet and should be used occasionally if the flock members are not also free-ranging. Ducklings can eat chick starter feed as long as it is not medicated. Typically, pellet foot or crumble suits a duck best</string>
    <string name="duck2">Peking Duck, An Easy Home Version (北京烤鸭) - Red House Spice It\'s a dish consisting of several elements: sliced pieces of roast duck with crispy skin and tender meat, thin pancakes, a savoury sauce and some julienned vegetables. These elements are assembled into a roll for consumption.</string>
    <string name="duck3">The rich flavor of the tender duck meat and crispy duck skin pairs well with the salty, seasoned notes of the hoisin sauce. Traditional Peking Duck is known the world over for the time-consuming and complex method followed to yield extremely crispy skin and moist, tender meat.</string>
    <string name="duck4">Beijing Peking is the name of the city according to Chinese Postal Map Romanization, and the traditional customary name for Beijing in English. The term originated with French missionaries four hundred years ago and corresponds to an older pronunciation predating a subsequent sound change in Mandarin from [kʲ] to [tɕ].</string>
    <string name="duck5">Roast duck was one of the cooked foods sold door-to-door by street vendors, and it became a speciality of nearby Nanjing, the first capital of the Ming dynasty. Allegedly, it was only after 1420, when the Yongle emperor moved his capital to Beijing, that roast duck found its way to the city.</string>
    <string name="duck6">The most popular dish is Peking duck, which originated from Beijing. A whole duck is sliced into pieces before eating. The slices are commonly eaten with green onion, fresh cucumber, and sweet soybean paste wrapped in a pancake made from flour and water. Learn more about Peking duck</string>
    <string name="duck7">Peking Duck is a delicacy in Chinese cuisine and for obvious reasons. Not only does the tender meat have a decadent flavor but the dish\'s signature perfect, crispy skin takes great skill and a long time to achieve. It\'s not a meal that most Chinese people make at home.</string>
    <string name="duck8">High-quality ingredients make up a large part of the cost of the food at these establishments. They only buy the best pieces of meat. They also pair the duck with other high-quality ingredients.</string>
    <string name="duck9">There are hundreds of cooking styles in China, which can be grouped into three different categories. MANDARIN (Northern Chinese): Mandarin style, also known as Peking (or Beijing) style can be generally categorized by its light, elegant, mildly taste and by the liberal use of garlic and scallions.</string>
    <string name="duck10">Submerge the duck in oil and deep fry it, holding it by the neck with heat-resistant oven mitts or just a towel. Be extremely careful, because the oil is extremely hot and there is a chance of getting burned. Fry it for about 15 minutes on all sides, until the duck has a light golden hue.</string>
    <string name="duck12">Peking duck</string>
    <string name="duck13">Photo showing Peking duck</string>
    <string name="duck14">For more go to Next Page</string>
    <string name="duck15">What is in a Peking duck?</string>
    <string name="duck16">Why is Peking duck so special?</string>
    <string name="duck17">Why is it called Peking?</string>
    <string name="duck18">Why is Peking duck famous in China?</string>
    <string name="kung3">Traditionally, this Chinese chicken dish is a dry-stir fry — not a lot of sauce is added into Kung Pao chicken. However, with the amount of flavour explosions happening in this dish, you don’t miss OR want any more sauce. There’s so much flavour in this it’s crazy!</string>
    <string name="kung4">There are 6 main ingredients in the sauce to make the perfect Kung Pao Chicken:Chicken broth or stock (use low sodium) — you can also use water if you don’t have any broth on hand!Light soy — use light or low sodium if you can. Regular soy creates a really salty sauce for this recipe.Dark Soy Sauce — adds beautiful colour and flavour to the sauce!Hoisin sauce — more depth of flavour!Chinese black vinegar — or a good quality balsamic vinegar can be used instead.Chinese wine (Shaoxing) — to substitute you can use any of the following: dry sherry, gin, rice wine vinegar, apple cider vinegar.For the stir fry, I’ve included broth red and green bell peppers (or capsicums) and the traditional roasted peanuts. You can also add in diced celery, sliced carrots and/or zucchini!</string>
    <string name="kun8">Its famous in china</string>
    <string name="kun9">More About Kung Pao</string>
    <string name="baozi3">"Xiaolongbao" originatd in Changzhou, Jiangsu province, by Wan Hua Tea House in the years of Daoguang Emperor (1820 to 1850). Xiaolongbao evolved from the guantangbao (soup-filled dumplings/buns) from Kaifeng, Henan province, the capital city of Northern Song Dynasty (AD 960–1127).[3]
Raw tangbao
There are numerous styles of xiaolongbao in Jiangsu cuisine. Shanghai-style xiaolongbao originated in Nanxiang, which was a neighboring village of Shanghai in Jiangsu that eventually ended up becoming an outer suburb of Shanghai\'s Jiading District. The inventor of xiaolongbao sold them in his first store in Nanxiang next to the town\'s notable park, Guyi Garden. From there the xiaolongbao expanded into downtown Shanghai and outward. The Suzhou and Wuxi styles are larger (sometimes twice as large as a Nanxiang-style soup dumpling) and have sweeter fillings. The Nanjing style is smaller with an almost translucent skin and less meat.

Two specialist xiaolongbao restaurants have a particularly long history. One is Nanxiang Mantou Dian (Nanxiang Bun Shop), which derives from the original store in Nanxiang but is now located in the Yu Garden area. It is famed for its crab-meat-filled buns. The other is Gulong Restaurant, at the original site next to Guyi Garden in Nanxiang</string>
    <string name="baozi5">Origins</string>
    <string name="baozi6">click here for go next page and give rating</string>
</resources>