<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="#6b8e23">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/accent"
        android:gravity="center"
        android:text="@string/duck12"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/duck1"
        app:layout_constraintTop_toBottomOf="@+id/textView30"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-78dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/accent"
        android:gravity="center"
        android:text="@string/duck13"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView22"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#ffdab9"
        android:gravity="left"
        android:text="@string/duck1"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#ff0000"
        android:gravity="center"
        android:text="@string/duck14"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />
</androidx.constraintlayout.widget.ConstraintLayout>